# tire-degradation-energy-deployment

./: .env.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  data.dvc  docker-compose.prod.yml  docker-compose.yml  docs_architecture.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  retrain.yml
examples/: replay_telemetry.csv
examples/replay_benchmarks/: dirty_air_traffic.csv  dirty_air_traffic.csv.manifest.json  hard_fuel_burn.csv  hard_fuel_burn.csv.manifest.json  intermediate_wet_track.csv  intermediate_wet_track.csv.manifest.json  manifest.json  medium_long_run.csv  medium_long_run.csv.manifest.json  soft_hot_track.csv  soft_hot_track.csv.manifest.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
monitoring/: prometheus.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: f1-strategy-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/nginx/: nginx.conf
monitoring/rules/: f1-strategy.rules.yml
scripts/: deploy.sh
src/f1_strategy/: __init__.py  alerting.py  api.py  artifacts.py  cli.py  config.py  deployment.py  domain.py  drift.py  engine.py  evaluation.py  feature_store.py  live.py  metadata.py  models.py  monitoring.py  optimization.py  persistence.py  regression.py  replay.py  serialization.py  shadow.py  simulation.py  training.py
src/f1_strategy/data_sources/: __init__.py  fastf1_export.py  live_timing.py  openf1_bulk_export.py  openf1_export.py  openf1_intervals.py
src/f1_strategy/ui/: app.js  index.html  styles.css
tests/: test_api.py  test_integration_openf1.py  test_system.py  test_unit.py
