[project]
name = "f1-tire-energy-strategy"
version = "0.1.0"
description = "Production-oriented real-time tire degradation, energy deployment, and strategy optimization system."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
ml = ["numpy>=1.26", "scikit-learn>=1.4", "xgboost>=2.0", "lightgbm>=4.0"]
catboost = ["catboost>=1.2"]
deep = ["torch>=2.2"]
online = ["river>=0.22"]
all-models = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "river>=0.22",
    "torch>=2.2",
]
observability = ["prometheus-client>=0.20"]
persistence = ["duckdb>=1.0"]
data = ["fastf1>=3.5", "pandas>=2.0"]
tracking = ["mlflow>=2.12"]
dev = ["pytest>=8.0", "ruff>=0.4", "dvc>=3.0", "dvc-s3>=3.0"]

[project.scripts]
f1-simulate = "f1_strategy.cli:simulate_main"
f1-regression = "f1_strategy.regression:main"
f1-evaluate = "f1_strategy.evaluation:main"
f1-replay-evaluate = "f1_strategy.replay:main"
f1-train-model = "f1_strategy.training:main"
f1-train-xgboost = "f1_strategy.training:main"
f1-artifacts = "f1_strategy.artifacts:main"
f1-export-fastf1-replay = "f1_strategy.data_sources.fastf1_export:main"
f1-export-openf1 = "f1_strategy.data_sources.openf1_export:main"
f1-export-openf1-fleet = "f1_strategy.data_sources.openf1_intervals:main"
f1-export-data = "f1_strategy.persistence:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
f1_strategy = ["ui/*.html", "ui/*.css", "ui/*.js"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
# Pre-existing type issues — marked for cleanup when artifacts.py is split
module = ["f1_strategy.artifacts", "f1_strategy.models", "f1_strategy.api"]
ignore_errors = true
